# kdav

./: .gitignore  .kde-ci.yml  CMakeLists.txt  KDAVConfig.cmake.in  KF5DAVConfig.cmake.in  KF6DAVConfig.cmake.in  KPimKDAV2Config.cmake.in  KPimKDAVConfig.cmake.in  README  README.md  REUSE.toml  kdav.categories  kdav2.categories  libdav-version.h.cmake  libkdav-version.h.cmake  libkdav2-version.h.cmake  metainfo.yaml
autotests/: CMakeLists.txt  davcollectioncreatejobtest.cpp  davcollectioncreatejobtest.h  davcollectiondeletejobtest.cpp  davcollectiondeletejobtest.h  davcollectionmodifyjobtest.cpp  davcollectionmodifyjobtest.h  davcollectionsfetchjobtest.cpp  davcollectionsfetchjobtest.h  davcollectionsmultifetchjobtest.cpp  davcollectionsmultifetchjobtest.h  davcollectiontest.cpp  davcollectiontest.h  davitemdeletejobtest.cpp  davitemdeletejobtest.h  davitemfetchjobtest.cpp  davitemfetchjobtest.h  davitemmodifyjobtest.cpp  davitemmodifyjobtest.h  davitemsfetchjobtest.cpp  davitemsfetchjobtest.h  davitemslistjobtest.cpp  davitemslistjobtest.h  davitemtest.cpp  davitemtest.h  davprincipalsearchjobtest.cpp  davprincipalsearchjobtest.h  davpushdontnotifytest.cpp  davpushdontnotifytest.h  davpushregistrationjobtest.cpp  davpushregistrationjobtest.h  davurltest.cpp  davurltest.h  fakeserver.cpp  fakeserver.h
autotests/data/: datacollectioncreatejob-caldav-success.txt  datacollectioncreatejob-carddav-success.txt  datacollectioncreatejob-error.txt  dataitemfetchjob.txt  dataitemmodifyjob-get-conflict-item.txt  dataitemmodifyjob-get-redirected.txt  dataitemmodifyjob-get-refreshed.txt  dataitemmodifyjob-put-conflict.txt  dataitemmodifyjob-put-error.txt  dataitemmodifyjob-put-redirect.txt  dataitemmodifyjob-put-success.txt  dataitemmultifetchjob-caldav-collections.txt  dataitemmultifetchjob-caldav.txt  dataitemmultifetchjob-carddav-collections.txt  dataitemmultifetchjob-carddav.txt  dataitemmultifetchjob-error.txt  davcollectionsfetchjob-caldav-color-collections.txt  davcollectionsfetchjob-collection-homeset-404.txt  davcollectionsfetchjob-fallback-404.txt  davcollectionsfetchjob-groupdav.txt  davitemslistjob-carddav-collection-and-item.txt  davitemslistjob-carddav-duplicate.txt  davitemslistjob-carddav-error.txt  davitemslistjob-carddav-items.txt  davitemslistjob-carddav-single-item.txt  davprincipalsearchjob-propfind-empty.txt  davprincipalsearchjob-propfind-error.txt  davprincipalsearchjob-propfind-no200.txt  davprincipalsearchjob-propfind-success.txt  davprincipalsearchjob-propfind-two-hrefs.txt  davprincipalsearchjob-report-displayname.txt  davprincipalsearchjob-report-emailaddress.txt  davprincipalsearchjob-report-error.txt  davprincipalsearchjob-report-groups.txt  davprincipalsearchjob-report-users.txt
po/ar/: libkdav.po  libkdav6.po
po/ast/: libkdav6.po
po/az/: libkdav.po  libkdav6.po
po/bg/: libkdav.po  libkdav6.po
po/ca/: libkdav.po  libkdav6.po
po/ca@valencia/: libkdav.po  libkdav6.po
po/cs/: libkdav.po  libkdav6.po
po/de/: libkdav.po  libkdav6.po
po/el/: libkdav.po  libkdav6.po
po/en_GB/: libkdav.po  libkdav6.po
po/eo/: libkdav.po  libkdav6.po
po/es/: libkdav.po  libkdav6.po
po/et/: libkdav.po  libkdav6.po
po/eu/: libkdav.po  libkdav6.po
po/fi/: libkdav.po  libkdav6.po
po/fr/: libkdav.po  libkdav6.po
po/ga/: libkdav.po  libkdav6.po
po/gl/: libkdav.po  libkdav6.po
po/he/: libkdav.po  libkdav6.po
po/hi/: libkdav.po  libkdav6.po
po/hu/: libkdav6.po
po/ia/: libkdav.po  libkdav6.po
po/it/: libkdav.po  libkdav6.po
po/ja/: libkdav.po  libkdav6.po
po/ka/: libkdav.po  libkdav6.po
po/ko/: libkdav.po  libkdav6.po
po/lt/: libkdav.po  libkdav6.po
po/lv/: libkdav6.po
po/nb/: libkdav.po  libkdav6.po
po/nl/: libkdav.po  libkdav6.po
po/nn/: libkdav.po  libkdav6.po
po/pl/: libkdav.po  libkdav6.po
po/pt/: libkdav.po  libkdav6.po
po/pt_BR/: libkdav.po  libkdav6.po
po/ro/: libkdav.po  libkdav6.po
po/ru/: libkdav.po  libkdav6.po
po/sa/: libkdav6.po
po/sk/: libkdav.po  libkdav6.po
po/sl/: libkdav.po  libkdav6.po
po/sr/: libkdav.po  libkdav6.po
po/sr@ijekavian/: libkdav.po  libkdav6.po
po/sr@ijekavianlatin/: libkdav.po  libkdav6.po
po/sr@latin/: libkdav.po  libkdav6.po
po/sv/: libkdav.po  libkdav6.po
po/ta/: libkdav6.po
po/tr/: libkdav.po  libkdav6.po
po/ug/: libkdav6.po
po/uk/: libkdav.po  libkdav6.po
po/zh_CN/: libkdav.po  libkdav6.po
po/zh_TW/: libkdav.po  libkdav6.po
resource/: davgroupwareprovider.desktop  davgroupwareresource.desktop
services/: davical.desktop  owncloud.desktop  yahoo.desktop
src/: CMakeLists.txt  Messages.sh  kdav-index.qdoc  kdav.qdoc  kdav.qdocconf
src/common/: davcollection.cpp  davcollection.h  davcollectioncreatejob.cpp  davcollectioncreatejob.h  davcollectiondeletejob.cpp  davcollectiondeletejob.h  davcollectionmodifyjob.cpp  davcollectionmodifyjob.h  davcollectionsfetchjob.cpp  davcollectionsfetchjob.h  davcollectionsmultifetchjob.cpp  davcollectionsmultifetchjob.h  daverror-kdepim-runtime.cpp  daverror-kdepim-runtime.h  daverror.cpp  daverror.h  davitem.cpp  davitem.h  davitemcreatejob.cpp  davitemcreatejob.h  davitemdeletejob.cpp  davitemdeletejob.h  davitemfetchjob.cpp  davitemfetchjob.h  davitemmodifyjob.cpp  davitemmodifyjob.h  davitemsfetchjob.cpp  davitemsfetchjob.h  davitemslistjob.cpp  davitemslistjob.h  davjob.cpp  davjob.h  davjobbase.cpp  davjobbase.h  davjobbase_p.h  davmanager.cpp  davmanager.h  davmanager_p.h  davmultigetprotocol.cpp  davmultigetprotocol.h  (+36 more)
src/protocols/: caldavprotocol.cpp  caldavprotocol.h  caldavprotocol_p.h  carddavprotocol.cpp  carddavprotocol.h  carddavprotocol_p.h  groupdavprotocol.cpp  groupdavprotocol.h  groupdavprotocol_p.h
test/: CMakeLists.txt  testserver.cpp
